@@ -19,6 +19,7 @@ open Asttypes
 type primitive =
     Pidentity
   | Pignore
+  | Prevapply
     (* Globals *)
   | Pgetglobal of Ident.t
   | Psetglobal of Ident.t
